fixed user handle alignment

--- a/public/styles/tweet-feed.css
+++ b/public/styles/tweet-feed.css
@@ -44,6 +44,7 @@
 
 #tweet p {
   float: right;
+  margin-top: 5px;
 }
 
 #tweet footer {
